<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.Home">
    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:id="@+id/appBarLayout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="10dp"-->
    <!--        android:background="@drawable/radius_toolbar"-->
    <!--        android:elevation="20dp"-->
    <!--        >-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_home"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/radius_toolbar"
        app:menu="@menu/menu_toolbar_home"
        app:title="Makoil"
        app:titleTextColor="@color/md_theme_light_primary" />
    <!--    </com.google.android.material.appbar.AppBarLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:lottie_rawRes="@raw/system_working" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/status"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_status_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/on"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_status_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_connect"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="..."
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_25dp"
                android:elevation="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/setting"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_edit_parameter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/pen_edit"
                    android:padding="4dp"
                    android:text="@string/edit_parameter"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ox1"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:boxCornerRadiusBottomEnd="30dp"
                            app:boxCornerRadiusBottomStart="30dp"
                            app:boxCornerRadiusTopEnd="30dp"
                            app:boxCornerRadiusTopStart="30dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/d_mm"
                                android:maxLines="1"
                                android:padding="12dp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:boxCornerRadiusBottomEnd="30dp"
                            app:boxCornerRadiusBottomStart="30dp"
                            app:boxCornerRadiusTopEnd="30dp"
                            app:boxCornerRadiusTopStart="30dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/n"
                                android:maxLines="1"
                                android:padding="12dp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:boxCornerRadiusBottomEnd="30dp"
                            app:boxCornerRadiusBottomStart="30dp"
                            app:boxCornerRadiusTopEnd="30dp"
                            app:boxCornerRadiusTopStart="30dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/m"
                                android:maxLines="1"
                                android:padding="12dp" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ox2"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:boxCornerRadiusBottomEnd="30dp"
                            app:boxCornerRadiusBottomStart="30dp"
                            app:boxCornerRadiusTopEnd="30dp"
                            app:boxCornerRadiusTopStart="30dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/step_mm"
                                android:maxLines="1"
                                android:padding="12dp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:boxCornerRadiusBottomEnd="30dp"
                            app:boxCornerRadiusBottomStart="30dp"
                            app:boxCornerRadiusTopEnd="30dp"
                            app:boxCornerRadiusTopStart="30dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/n_step"
                                android:maxLines="1"
                                android:padding="12dp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:boxCornerRadiusBottomEnd="30dp"
                            app:boxCornerRadiusBottomStart="30dp"
                            app:boxCornerRadiusTopEnd="30dp"
                            app:boxCornerRadiusTopStart="30dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/m_step"
                                android:maxLines="1"
                                android:padding="12dp" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>


                </LinearLayout>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/anim_data_cloud"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_url="https://assets7.lottiefiles.com/packages/lf20_h2iwbavc.json" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/btn_send_data"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:lottie_autoPlay="true"
                    app:lottie_url="https://assets7.lottiefiles.com/packages/lf20_u4g6bqib.json" />


                <Button
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:text="@string/run" />
                <Button
                    android:id="@+id/btn_stop"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:text="@string/stop"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"/>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:text="@string/please_read_the_manual_before_use"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>